--- a/templates/emails/forgot_password.html.twig
+++ b/templates/emails/forgot_password.html.twig
@@ -3,7 +3,7 @@
     <h3>Confirmation de votre demande de modification de mot de passe.</h3>
 
     <p>Bonjour {{ user.username }}, pour modifier votre mot de passe sur <a href="http://snowtricks.com">Snowtricks.com</a>,
-        Veuillez cliquer sur le liens suivant : <a href="http://snowtricks.com/{{ user.id }}/{{ user.passwordKey }}">Snowtricks.com/{{ user.id }}/{{ user.passwordKey }}</a>
+        Veuillez cliquer sur le liens suivant : <a href="snowtricks.com/reset_password/{{ user.id }}/{{ user.passwordKey }}">Snowtricks.com/reset_password/{{ user.id }}/{{ user.passwordKey }}</a>
     </p>
 
 {% endblock %}
