--- a/templates/security/forgot_password.html.twig
+++ b/templates/security/forgot_password.html.twig
@@ -1,16 +1,37 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}SnowTricks - Mot de place oublié.{% endblock %}
+
 {% block body %}
-
-    {% for message in app.flashes('error') %}
-        <div class="flash-notice">
-            {{ message }}
+    <section class="form-style-security forgotPass-section">
+        <div>
+            {% for message in app.flashes('message-error') %}
+                <div class="message-error">
+                    <div class="flash-notice alert alert-danger alert-dismissible">
+                        <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+                        {{ message }}
+                    </div>
+                </div>
+            {% endfor %}
         </div>
-    {% endfor %}
 
-    {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <input type="submit" value="Envoyer" />
-    {{ form_end(form) }}
+        <div class="container border form-group d-flex align-items-center flex-column justify-content-around">
+            <h1>Mot de passe oublié</h1>
 
+            {{ form_start(form) }}
+            <div class="form-group d-flex flex-column align-items-center">
+                {{ form_label(form.username) }}
+                <div class="form-errors">
+                    {{ form_errors(form.username) }}
+                </div>
+                {{ form_widget(form.username) }}
+            </div>
+
+            <div class="form-group d-flex flex-column align-items-center">
+                <button class="btn btn-primary btn-primary-blue-reverse" type="submit">Demander le changement <br>de mon mot de passe</button>
+            </div>
+
+            {{ form_end(form) }}
+        </div>
+    </section>
 {% endblock %}
