--- a/templates/tricks/ajax.html.twig
+++ b/templates/tricks/ajax.html.twig
@@ -3,7 +3,7 @@
         <div class="trick {{ trick.name }} container col-xs-12 col-sm-12 col-md-5 col-lg-3">
             <div class="one_illustration">
                 {% if trick.illustration is empty %}
-                    <img class="tricks_one_illustration" src="{{ illustrations_folder }}/default.jpg"
+                    <img class="tricks_one_illustration" src="{{ illustrations_folder }}/noimg.png"
                          alt="image par default">
                 {% else %}
                     {% for img in trick.illustration %}
