--- a/templates/tricks/details.html.twig
+++ b/templates/tricks/details.html.twig
@@ -3,76 +3,100 @@
 {% block title %}{{ tricks.name }} - SnowTricks{% endblock %}
 
 {% block body %}
-    <h1>Trick</h1>
-    {% if illustrations is empty %}
-        <img src="{{ illustrations_folder }}/default.jpg" alt="image par default">
+    {% if background %}
+        {% set back = background.name %}
     {% else %}
-    {% for img in illustrations %}
-        <div>
-            <img src="{{ illustrations_folder }}/{{ img.name}}" alt="image {{ tricks.name }}">
-            <a href="{{ path('illustration_delete', { 'id': img.id }) }}">Delete</a>
-        </div>
-    {% endfor %}
+        {% set back = 'noimg.png' %}
     {% endif %}
-    {% if videos is empty %}
-        <img src="{{ illustrations_folder }}/noVideo.jpg" alt="aucune video">
-    {% else %}
-        {% for video in videos %}
-            <div>
-                {{ video.name | raw }}
+    <section class="details-section-head" style="background-image: url({{ illustrations_folder }}/{{ back }})" >
+        <div class="detail-wallpaper d-flex">
+            {% if app.user %}
+                <div class="div_button d-flex btn-group">
+                    <a class="btn btn-primary-blue font-white"
+                       href="{{ path('trick_edit', { 'id': tricks.id }) }}"><i class="fas fa-pencil-alt"></i></a>
+                    <a class="btn btn-primary-blue font-white" data-toggle="modal" data-target="#myModal{{ tricks.id }}"
+                       href="#"><i class="fas fa-trash-alt"></i></a>
+                </div>
+            {% endif %}
+            <div class="font-darkBlue">
+                <h1>{{ tricks.name }}</h1>
             </div>
-        {% endfor %}
-    {% endif %}
-    <table>
-        <tbody>
-        <tr>
-            <th>Id</th>
-            <td>{{ tricks.id }}</td>
-        </tr>
-        <tr>
-            <th>Name</th>
-            <td>{{ tricks.name }}</td>
-        </tr>
-        <tr>
-            <th>Description</th>
-            <td>{{ tricks.description }}</td>
-        </tr>
-        <tr>
-            <th>Groupe</th>
-            <td>{{ tricks.group.name }}</td>
-        </tr>
-        <tr>
-            <th>Boutons</th>
-            <td><a href="{{ path('trick_edit', { 'id': tricks.id }) }}">Edit</a></td>
-        </tr>
-        </tbody>
-    </table>
-    <div>
-        <h4>Comments creation</h4>
-        {% if author %}
-        {{ form_start(form) }}
-        {{ form_widget(form) }}
-        <input type="submit" value="Create" />
-        {{ form_end(form) }}
-        {% endif %}
-        <ul>
-            <li>
-                <a href="{{ path('home_page') }}">Back to the list</a>
-            </li>
-        </ul>
-    </div>
-    <div>
-        {% for comment in comments  %}
-            <div class="comment{{ comment.id }}">
-                <img src="{{ avatars_folder }}/{{ comment.author.avatar}}" alt="avatar {{ comment.author.username }}">
-                {{ comment.author.username }}
-                {{ comment.comment }}
-                {{ comment.dateTime|date("Y-m-d H:i", "Europe/Paris") }}
-
-                {% if author == comment.author %}
-                    <a href="{{ path('comment_delete', { 'id': comment.id }) }}"> Delete </a>
+        </div>
+        {% block modal %}
+            <div class="modal fade" id="myModal{{ tricks.id }}" role="dialog">
+                <div class="modal-dialog">
+                    <!-- Modal content-->
+                    <div class="modal-content font-darkBlue">
+                        <div class="modal-header  flex-row-reverse">
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            <h4 class="modal-title">Suppression</h4>
+                        </div>
+                        <div class="modal-body">
+                            <p>Etes-vous sur de vouloir supprimer définitivement la figure
+                                <span>{{ tricks.name }}</span> ?</p>
+                        </div>
+                        <div class="modal-footer">
+                            <a class="button btn btn-danger font-white"
+                               href="{{ path('trick_delete_url', { 'id': tricks.id }) }}">Supprimer</a>
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        {% endblock %}
+    </section>
+    <section class="details-section-media">
+        {% include 'tricks/details_mobile.html.twig' %}
+        {% include 'tricks/details_large.html.twig' %}
+    </section>
+    <section class="container detail-informations">
+        <div>
+            <p class="text-justify">{{ tricks.description }}</p>
+            <div class="info-trick d-flex flex-column justify-content-center align-items-center">
+                <p class="border-white">Date de création : {{ tricks.dateCreation|date("m/d/Y") }}</p>
+                <p class="border-white">Groupe : {{ tricks.group.name }}</p>
+                {% if tricks.dateEdit %}
+                <p>Date de modification : {{ tricks.dateEdit|date("m/d/Y") }}</p>
                 {% endif %}
             </div>
-        {% endfor %}
-    </div>
+        </div>
+    </section>
+    <section class="detail-comment">
+        {% if comments %}
+            <hr class="hr-white">
+        {% endif %}
+        {% if app.user %}
+            <div class="new-comment">
+                {{ form_start(form) }}
+                <div class="form-group d-flex flex-column align-items-center">
+                    {{ form_label(form.comment) }}
+                    <div class="form-errors">
+                        {{ form_errors(form.comment) }}
+                    </div>
+                    {{ form_widget(form.comment) }}
+                </div>
+                <div class="form-group d-flex flex-column align-items-center">
+                    <button class="btn btn-primary btn-primary-blue-reverse" type="submit">Laisser un commentaire</button>
+                </div>
+                {{ form_end(form) }}
+            </div>
+        {% endif %}
+        <div class="all-comment d-flex flex-column-reverse">
+            {% for comment in comments %}
+                <div class="container-comment container d-flex comment{{ comment.id }}">
+                        <img class="avatar-user rounded-circle align-self-center" src="{{ avatars_folder }}/{{ comment.author.avatar}}" alt="avatar {{ comment.author.username }}">
+                        <div class="container content-comment d-flex flex-column">
+                        <p class="username font-blue font-weight-bold">{{ comment.author.username }}</p>
+                        <p>{{ comment.comment }}</p>
+                        <div class="d-flex justify-content-between">
+                        <p class="small">{{ comment.dateTime|date("d-m-Y H:i", "Europe/Paris") }}</p>
+                        {% if author == comment.author %}
+                            <a href="{{ path('comment_delete', { 'id': comment.id }) }}"> Supprimer</a>
+                        {% endif %}
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+    </section>
 {% endblock %}
