--- a/templates/illustrations/edit.html.twig
+++ b/templates/illustrations/edit.html.twig
@@ -1,15 +1,27 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Illustration creation</h1>
-
-    {{ form_start(form) }}
-    <input type="submit" value="Edit" />
-    {{ form_end(form) }}
-
-    <ul>
-        <li>
-            <a href="{{ path('trick_details', { 'id': tricks.id }) }}">Back to the list</a>
-        </li>
-    </ul>
+    <section class="section-addIllustration d-flex flex-column">
+        <h4 class="text-center">Editer cette image</h4>
+        <p class="text-center instruction container">Veuillez cliquer sur le mot illustration pour edit votre image pour la figure.</p>
+        <div class="form-edit  d-flex flex-column justify-content-center">
+            {{ form_start(form) }}
+            <div class="form-group d-flex flex-column align-items-center justify-content-around">
+                <div class="div-inputFile">
+                    {{ form_label(form.name) }}
+                </div>
+                <div class="form-errors">
+                    {{ form_errors(form.name) }}
+                </div>
+                {{ form_widget(form.name) }}
+                <button class="btn btn-primary btn-primary-blue-reverse" type="submit">Editer l'image</button>
+            </div>
+            {{ form_end(form) }}
+        </div>
+    </section>
 {% endblock %}
+
+{% block javascripts %}
+    <script src="{{ asset('build/js/inputFiles.js') }}"></script>
+{% endblock %}
+
