--- a/templates/security/registration.html.twig
+++ b/templates/security/registration.html.twig
@@ -66,5 +66,5 @@
 {% endblock %}
 
 {% block javascripts %}
-    <script src="{{ asset('build/js/registration.js') }}"></script>
+    <script src="{{ asset('build/js/inputFiles.js') }}"></script>
 {% endblock %}
