--- a/templates/tricks/edit.html.twig
+++ b/templates/tricks/edit.html.twig
@@ -1,21 +1,14 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Trick edit</h1>
-
-    {{ form_start(edit_form) }}
-    {{ form_widget(edit_form) }}
-    <input type="submit" value="Edit" />
-    {{ form_end(edit_form) }}
-
-    <ul>
-        <li>
-            <a href="{{ path('home_page') }}">Back to the list</a>
-        </li>
-        <li>
-            {{ form_start(delete_form) }}
-            <input type="submit" value="Delete">
-            {{ form_end(delete_form) }}
-        </li>
-    </ul>
+    {% if background %}
+        {% set back = background.name %}
+    {% else %}
+        {% set back = 'noimg.png' %}
+    {% endif %}
+    <div class="detail-background d-flex flex-column align-items-center" style="background-image: url({{ illustrations_folder }}/{{ back }})">
+        <div class="detail-card vw_100">
+            {% include 'tricks/edit_card.html.twig' %}
+        </div>
+    </div>
 {% endblock %}
