edit front and end form

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -53,6 +53,7 @@
     </header>
     {% endblock %}
     <body>
+    {% include 'security/errors_success.html.twig' %}
     {% block body %}{% endblock %}
     </body>
     {% block footer %}
