--- a/templates/security/registration.html.twig
+++ b/templates/security/registration.html.twig
@@ -3,7 +3,7 @@
 {% block title %}SnowTricks - Inscription.{% endblock %}
 
 {% block body %}
-    <section class="form-style-security registration-section flex-column">
+    <section class="height-page form-style-security registration-section flex-column">
         <div>
             {% for message in app.flashes('message-error') %}
                 <div class="message-error">
