--- a/templates/illustrations/new.html.twig
+++ b/templates/illustrations/new.html.twig
@@ -24,5 +24,5 @@
 {% endblock %}
 
 {% block javascripts %}
-    <script src="{{ asset('build/js/registration.js') }}"></script>
+    <script src="{{ asset('build/js/inputFiles.js') }}"></script>
 {% endblock %}
