--- a/templates/security/forgot_password.html.twig
+++ b/templates/security/forgot_password.html.twig
@@ -3,7 +3,7 @@
 {% block title %}SnowTricks - Mot de place oublié.{% endblock %}
 
 {% block body %}
-    <section class="form-style-security forgotPass-section">
+    <section class="height-page form-style-security forgotPass-section">
         <div>
             {% for message in app.flashes('message-error') %}
                 <div class="message-error">
