--- a/templates/security/reset_password.html.twig
+++ b/templates/security/reset_password.html.twig
@@ -1,10 +1,51 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}SnowTricks - Modifier mon mot de passe.{% endblock %}
+
 {% block body %}
+    <section class="height-page form-style-security registration-section flex-column">
+        <div>
+            {% for message in app.flashes('message-error') %}
+                <div class="message-error">
+                    <div class="flash-notice alert alert-danger alert-dismissible">
+                        <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+                        {{ message }}
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+        <div class="container border form-group d-flex align-items-center flex-column justify-content-around">
+            <h1>Modifier mot de passe</h1>
 
-    {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <input type="submit" value="Edit" />
-    {{ form_end(form) }}
+            {{ form_start(form) }}
+            <div class="form-group d-flex flex-column align-items-center">
+                {{ form_label(form.username) }}
+                <div class="form-errors">
+                    {{ form_errors(form.username) }}
+                </div>
+                {{ form_widget(form.username) }}
+            </div>
 
+            <div class="form-group d-flex flex-column align-items-center">
+                {{ form_label(form.plainPassword) }}
+                <div class="form-errors">
+                    {{ form_errors(form.plainPassword) }}
+                </div>
+                {{ form_widget(form.plainPassword) }}
+            </div>
+
+            <div class="form-group d-flex flex-column align-items-center">
+                <button class="btn btn-primary btn-primary-blue-reverse" type="submit">Modifier mon mot de passe</button>
+            </div>
+
+            {{ form_end(form) }}
+            <div class="div-a d-flex flex-column align-items-center justify-content-between">
+                <a class="font-white blue-hover" href="{{ path('login') }}">Déjà un compte ?</a>
+            </div>
+        </div>
+    </section>
+{% endblock %}
+
+{% block javascripts %}
+    <script src="{{ asset('build/js/inputFiles.js') }}"></script>
 {% endblock %}
