edit js for arrow index

--- a/templates/tricks/index.html.twig
+++ b/templates/tricks/index.html.twig
@@ -74,7 +74,7 @@
         {% endfor %}
         <button id="btn-ajax" class="btn btn-primary btn-ajax">Voir d'autres Figures</button>
     </section>
-        <i id="" class="arrow-up fixed-bottom fas fa-2x fa-arrow-up"></i>
+    <i id="arrow-up" class="arrow-up fas fa-2x fa-arrow-up d-none"></i>
 {% endblock %}
 
 {% block javascripts %}
