--- a/templates/tricks/details_mobile.html.twig
+++ b/templates/tricks/details_mobile.html.twig
@@ -21,32 +21,11 @@
                                                 <div class="div_button d-flex">
                                                     <a class="button btn btn-link font-white back-blue"
                                                        href="{{ path('illustration_edit', { 'id': img.id }) }}"><i class="fas fa-pencil-alt"></i></a>
-                                                    <a class="button btn btn-link font-white back-blue" data-toggle="modal" data-target="#ModalImg{{ img.id }}"
-                                                       href="#"><i class="fas fa-trash-alt"></i></a>
+                                                    <a class="button btn btn-link font-white back-blue"
+                                                       href="{{ path('illustration_delete_mobile', {'id' : img.id }) }}"><i class="fas fa-trash-alt"></i></a>
                                                 </div>
                                             {% endif %}
                                         </div>
-                                        {% block modal_delete %}
-                                            <div class="modal fade" id="ModalImg{{ img.id }}" role="dialog">
-                                                <div class="modal-dialog">
-                                                    <!-- Modal content-->
-                                                    <div class="modal-content font-darkBlue">
-                                                        <div class="modal-header  flex-row-reverse">
-                                                            <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                                            <h4 class="modal-title">Suppression</h4>
-                                                        </div>
-                                                        <div class="modal-body">
-                                                            <p>Etes-vous sur de vouloir supprimer définitivement cette illustration ?</p>
-                                                        </div>
-                                                        <div class="modal-footer">
-                                                            <a class="button btn btn-danger font-white"
-                                                               href="{{ path('illustration_delete', { 'id': img.id }) }}">Supprimer</a>
-                                                            <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        {% endblock %}
                                     {% endfor %}
                             </div>
                             <div class="media-videos  d-flex flex-column align-items-center">
@@ -57,32 +36,11 @@
                                                 <div class="div_button d-flex">
                                                     <a class="button btn btn-link font-white back-blue"
                                                        href="{{ path('trick_edit', { 'id': tricks.id }) }}"><i class="fas fa-pencil-alt"></i></a>
-                                                    <a class="button btn btn-link font-white back-blue" data-toggle="modal" data-target="#ModalVideo{{ video.id }}"
-                                                       href="#"><i class="fas fa-trash-alt"></i></a>
+                                                    <a class="button btn btn-link font-white back-blue"
+                                                       href="{{ path('video_delete_mobile', { 'id' : video.id }) }}"><i class="fas fa-trash-alt"></i></a>
                                                 </div>
                                             {% endif %}
                                         </div>
-                                        {% block modal_delete_video %}
-                                            <div class="modal fade" id="ModalVideo{{ video.id }}" role="dialog">
-                                                <div class="modal-dialog">
-                                                    <!-- Modal content-->
-                                                    <div class="modal-content font-darkBlue">
-                                                        <div class="modal-header  flex-row-reverse">
-                                                            <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                                            <h4 class="modal-title">Suppression</h4>
-                                                        </div>
-                                                        <div class="modal-body">
-                                                            <p>Etes-vous sur de vouloir supprimer définitivement cette video ?</p>
-                                                        </div>
-                                                        <div class="modal-footer">
-                                                            <a class="button btn btn-danger font-white"
-                                                               href="{{ path('illustration_delete', { 'id': video.id }) }}">Supprimer</a>
-                                                            <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        {% endblock %}
                                     {% endfor %}
                             </div>
                         </div>
