--- a/templates/illustrations/delete.html.twig
+++ b/templates/illustrations/delete.html.twig
@@ -1,5 +1,8 @@
 {% extends 'base.html.twig' %}
 
+{% block title %} Supprimer l'illustration - SnowTricks{% endblock %}
+
+
 {% block body %}
     <section class="delete-illusration">
         <h3>Supprimer une illustration</h3>
