--- a/templates/illustrations/edit.html.twig
+++ b/templates/illustrations/edit.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
+{% block title %} Editer l'illustration - SnowTricks{% endblock %}
+
 {% block body %}
     <section class="section-addIllustration d-flex flex-column">
         <h4 class="text-center">Editer cette image</h4>
