--- a/templates/security/forgot_password.html.twig
+++ b/templates/security/forgot_password.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}SnowTricks - Mot de place oublié.{% endblock %}
+{% block title %}Mot de place oublié - Snowtricks{% endblock %}
 
 {% block body %}
     <section class="height-page form-style-security forgotPass-section">
