--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}SnowTricks - Connexion.{% endblock %}
+{% block title %}Connexion - Snowtricks {% endblock %}
 
 {% block body %}
     <section class="form-style-security height-page login-section d-flex align-items-center flex-column">
