--- a/templates/security/registration.html.twig
+++ b/templates/security/registration.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}SnowTricks - Inscription.{% endblock %}
+{% block title %}SInscription - Snowtricks{% endblock %}
 
 {% block body %}
     <section class="height-page form-style-security registration-section flex-column">
