--- a/templates/security/reset_password.html.twig
+++ b/templates/security/reset_password.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}SnowTricks - Modifier mon mot de passe.{% endblock %}
+{% block title %}Modifier mon mot de passe - Snowtricks {% endblock %}
 
 {% block body %}
     <section class="height-page form-style-security registration-section flex-column">
