--- a/templates/tricks/new.html.twig
+++ b/templates/tricks/new.html.twig
@@ -1,5 +1,8 @@
 {% extends 'base.html.twig' %}
 
+{% block title %} Nouvelle figure - SnowTricks{% endblock %}
+
+
 {% block body %}
     <div class="section-new-trick detail-background d-flex justify-content-center" style="background-image: url({{ illustrations_folder }}/noimg.png)">
         <div class="detail-card">
