--- a/templates/illustrations/new.html.twig
+++ b/templates/illustrations/new.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
+{% block title %} Nouvelle illustration - SnowTricks{% endblock %}
+
 {% block body %}
     <section class="section-addVideo d-flex flex-column">
         <h4 class="text-center font-blue">Ajouter une image</h4>
