--- a/templates/video/new.html.twig
+++ b/templates/video/new.html.twig
@@ -1,5 +1,8 @@
 {% extends 'base.html.twig' %}
 
+{% block title %} Nouvelle video - SnowTricks{% endblock %}
+
+
 {% block body %}
     <section class="section-addVideo d-flex flex-column">
         <h4 class="text-center font-blue">Ajouter une video</h4>
