edit input file js

--- a/templates/illustrations/edit.html.twig
+++ b/templates/illustrations/edit.html.twig
@@ -24,6 +24,6 @@
 {% endblock %}
 
 {% block javascripts %}
-    <script src="{{ asset('build/js/inputFiles.js') }}"></script>
+    <script src="{{ asset('build/js/inputIllustration.js') }}"></script>
 {% endblock %}
 
