--- a/templates/security/registration.html.twig
+++ b/templates/security/registration.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}SInscription - Snowtricks{% endblock %}
+{% block title %}Inscription - Snowtricks{% endblock %}
 
 {% block body %}
     <section class="height-page form-style-security registration-section flex-column">
@@ -66,5 +66,5 @@
 {% endblock %}
 
 {% block javascripts %}
-    <script src="{{ asset('build/js/inputFiles.js') }}"></script>
+    <script src="{{ asset('build/js/inputAvatar.js') }}"></script>
 {% endblock %}
