--- a/templates/tricks/edit_card.html.twig
+++ b/templates/tricks/edit_card.html.twig
@@ -76,8 +76,8 @@
                     {{ form_widget(edit_form.group) }}
                 </div>
                 </div>
-                <div class="edit-div-button div_button">
-                <a class="button btn btn-danger font-white" data-toggle="modal" data-target="#myModal{{ tricks.id }}"
+                <div id="edit-div-button" class="div_button">
+                <a class="button btn btn-danger" data-toggle="modal" data-target="#myModal{{ tricks.id }}"
                    href="#">Supprimer</a>
                 <button class="btn btn-primary btn-primary-blue-reverse" type="submit">Editer la figure</button>
                 </div>
